<resources>
    <string name="app_name">Battleship.me</string>
    
    <string name="jid">Jabber ID</string>
    <string name="password">Password</string>
    <string name="port">Port</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    
	<string name="logging_in">Logging in…</string> 
	<string name="could_not_connect">Could not connect to the server.</string>
	<string name="error_while_connecting">An error occured while connecting.</string>  
	<string name="already_connected">You are already connected.</string> 
	<string name="invalid_jid">Invalid Jabber ID.</string>
    <string name="abort">Abort</string>
    
    <string name="default_port">5222</string>
    
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <string name="matchmaker_connection">Matchmaker connection</string>
    <string name="matchmaker_connect">Search partner</string>
    <string name="direct_connection">Direct connection</string>
    <string name="direct_connect">Connect to partner</string>
    
    <string name="waiting_for_opponent">Waiting for opponent…</string>
    
    <string name="really_logout">Do you really want to log out?</string>
    
</resources>
